<resources>
    <string name="app_name">DAM_07_CL</string>
    <string name="txt_notas">Mis notas</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_entrar">Entrar</string>
    <string name="title_activity_notas">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_notas">Notas</string>
    <string name="title_estrellas">Estrellas</string>
    <string name="title_perfil">Perfil</string>

</resources>