<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dam_07_cl.ItemFragment"
        android:label="@string/title_notas"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.dam_07_cl.ItemFragment"
        android:label="@string/title_estrellas"
        tools:layout="@layout/fragment_item_list" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.dam_07_cl.ItemFragment"
        android:label="@string/title_perfil"
        tools:layout="@layout/fragment_item_list" />
</navigation>